--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ put down because it is impossible to home them. Numbers don’t lie. There are s
                   <img src="gallery-item-01.jpg" class="img-responsive img-thumbnail">
                 </div>
                 <div class="col-lg-9 col-md-9 col-sm-9 col-xs-8">
-                  <p class="text-left text-muted text-success"><mark><b>Our mission</b></mark> is to help the creatures that don't have a voice. Man is mis-using the animal as in abusing them, testing products on them , killing them ....etc. Not only the stray but the pet animals are also facing abuse .
+                  <p class="text-left text-muted text-success"><mark><b>Mission</b></mark> is to help the creatures that don't have a voice. Man is mis-using the animal as in abusing them, testing products on them , killing them ....etc. Not only the stray but the pet animals are also facing abuse .
                     The female dogs : Breeders make them give birth to their puppies and after some time when bitches are unable to do so, due to various reasons, they abandon them.
                   </p>
                   <p>In our busy lives we don't realise that animals lives are being destroyed. We need to stand up for them. We aren't cruel to animals doesn't mean that others also aren't. Stop being a by-standard. Animals are our friends with fur and they need protection. That's why we say<mark> "Have a heart ? Do your part ! Save Animals!!"</mark></p>
